--- a/mandelbulber2/formula/ui/difs_box_diagonal_v3.ui
+++ b/mandelbulber2/formula/ui/difs_box_diagonal_v3.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>970</width>
-    <height>4871</height>
+    <height>4095</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1170,14 +1170,14 @@
         <item row="1" column="2">
          <widget class="QLabel" name="label_51">
           <property name="text">
-           <string>Stop Scale at iteration:</string>
+           <string>Stop at iteration:</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_66">
           <property name="text">
-           <string>Start Scale at iteration:</string>
+           <string>Start at iteration:</string>
           </property>
          </widget>
         </item>
@@ -1283,7 +1283,7 @@
            <item>
             <widget class="QLabel" name="label_74">
              <property name="text">
-              <string>Start vary iter. count =</string>
+              <string>Start at iter. count =</string>
              </property>
              <property name="wordWrap">
               <bool>true</bool>
@@ -1312,7 +1312,7 @@
            <item>
             <widget class="QLabel" name="label_59">
              <property name="text">
-              <string>Stop vary at iter. count =</string>
+              <string>Stop at iter. count =</string>
              </property>
              <property name="wordWrap">
               <bool>true</bool>
@@ -1655,14 +1655,14 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label_250">
           <property name="text">
-           <string>Start Rotation at iteration:</string>
+           <string>Start at iteration:</string>
           </property>
          </widget>
         </item>
         <item row="0" column="2">
          <widget class="QLabel" name="label_251">
           <property name="text">
-           <string>Stop Rotation at iteration:</string>
+           <string>Stop at iteration:</string>
           </property>
          </widget>
         </item>
@@ -2604,7 +2604,6 @@
       bxV&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;z &lt;span style=&quot;color:#676767&quot;&gt;=&lt;/span&gt; &lt;span style=&quot;color:#00008f&quot;&gt;max&lt;/span&gt;&lt;span style=&quot;color:#676767&quot;&gt;(&lt;/span&gt;bxV&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;z&lt;span style=&quot;color:#676767&quot;&gt;,&lt;/span&gt; &lt;span style=&quot;color:#ff1493&quot;&gt;0.0&lt;/span&gt;&lt;span style=&quot;color:#676767&quot;&gt;);&lt;/span&gt;
       bxD &lt;span style=&quot;color:#676767&quot;&gt;=&lt;/span&gt; bxV&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;&lt;span style=&quot;color:#00008f&quot;&gt;Length&lt;/span&gt;&lt;span style=&quot;color:#676767&quot;&gt;();&lt;/span&gt;
     &lt;span style=&quot;color:#676767&quot;&gt;}&lt;/span&gt;
-
     aux&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;dist &lt;span style=&quot;color:#676767&quot;&gt;=&lt;/span&gt; &lt;span style=&quot;color:#00008f&quot;&gt;min&lt;/span&gt;&lt;span style=&quot;color:#676767&quot;&gt;(&lt;/span&gt;aux&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;dist&lt;span style=&quot;color:#676767&quot;&gt;,&lt;/span&gt; bxD &lt;span style=&quot;color:#676767&quot;&gt;/&lt;/span&gt; aux&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;DE&lt;span style=&quot;color:#676767&quot;&gt;);&lt;/span&gt;
   &lt;span style=&quot;color:#676767&quot;&gt;}&lt;/span&gt;
 
